Fix gap between social icons on smallest viewports.

--- a/_src/assets/css/style.scss
+++ b/_src/assets/css/style.scss
@@ -121,6 +121,7 @@ footer {
         align-items: center;
         justify-content: space-apart;
         padding-left: 0;
+        gap: 2.5%;
         list-style: none;
     }
     a {
